Delection - Api
Conversation deleted - added
Notification read - added
Api.yml fixed
