# controller/message.js
@@ -11,7 +11,17 @@ const create = async (req, res,next) => {
   }
 }
 
-//Validators
+const deleteCollection = async (req, res, next) => {
+  try {
+    req.sentEmail = req.body.sent
+    req.receivedEmail = req.body.received
+    next()
+  } catch (err) {
+    return response.error(res, 500, 'Unexpected error')
+  }
+}
+
+//Validator
 const createValidator = (data) => {
   const schema = {
     content: Joi.string().required().min(0).max(1500),
@@ -21,8 +31,18 @@ const createValidator = (data) => {
   return Joi.validate(data,schema);
 }
 
+const deleteCollectionValidator = (data) => {
+  const schema = {
+    received: Joi.string().email().required(),
+    sent: Joi.string().email().required()
+  }
+  return Joi.validate(data,schema);
+}
+
 
 module.exports = {
   create,
-  createValidator
+  createValidator,
+  deleteCollection,
+  deleteCollectionValidator
 }
